@@ -1,10 +1,12 @@
 devel
 -----
 
+* fixed issue #6601: Context cancelled (never ending query)
+
 * added more AQL query results cache inspection and control functionality
 
-* the query editor within the web ui is now catching http 501 responses
-  propertly.
+* the query editor within the web ui is now catching HTTP 501 responses
+  properly
 
 * upgraded JEMalloc version to 5.1.0
 
